--- a/index.html
+++ b/index.html
@@ -1,34 +1,108 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Legendaries</title>
-  <link  href="assets/styles/index.css" rel="stylesheet">
-
+<html lang="pt-BR"></html>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Legendaries</title>
+    <link  href="assets/styles/index.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>   <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <img src="assets/Images/logo.svg" alt="Logo">
+<header>
+    <img src="/assets/images/logo.svg" alt="Logo">
     <nav class="navbar">
-      <a href="#">
-        Home
-
-      </a>
-      <a href="#">
-        Pokédex
-
-      </a>
-      <a href="#">
-        Legendaries
-
-      </a>
-      <a href="#">
-        Documentation
-
-      </a>
+        <a href="#">
+            Home
+        </a>
+        <a href="#">
+            Pokédex
+        </a>
+        <a href="#">
+            Legendaries
+        </a>
+        <a href="#">
+            Documentation
+        </a>
     </nav>
-  </header>
+</header>
+<main>
+    <h1>Legendaries</h1>
+    <div class="container-principal">
+        <div class="linha"></div>
+        <div class="story-mew">
+            <img src="/assets/images/mew.svg" alt=""/>
+            <div>
+            <h2>Mew</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+            ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis
+            dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
+            nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+        </p>
+            <div class="atributos">
+                <div class="container-atr">
+                    <div class="atr">
+                        <p>Healthy Points</p>
+                        <p>1000,000</p>
+                        <div class="barra-atributos">
+                            <div class="barra-porcen"></div>
+                        </div>
+                    </div>
+                    <div class="atr">
+                        <p>Experience</p>
+                        <p>1000,000</p>
+                        <div class="barra-atributos">
+                            <div class="barra-porcen"></div>
+                        </div>
+                    </div>
+                    <div class="atr">
+                        <p>Experience</p>
+                        <p>1000,000</p>
+                        <div class="barra-atributos">
+                            <div class="barra-porcen"></div>
+                        </div>
+                    </div>
+                    <div class="atr">
+                        <p>Experience</p>
+                        <p>1000,000</p>
+                        <div class="barra-atributos">
+                            <div class="barra-porcen"></div>
+                        </div>
+                    </div>
+                    <div class="atr">
+                        <p>Experience</p>
+                        <p>1000,000</p>
+                        <div class="barra-atributos">
+                            <div class="barra-porcen"></div>
+                        </div>
+                    </div>
+                    <div class="atr">
+                        <p>Experience</p>
+                        <p>1000,000</p>
+                        <div class="barra-atributos">
+                            <div class="barra-porcen"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-selec">
+      <img class="btn left" alt="" src="/assets/images/setadir.svg" >
+      <img alt="" class="legendaryCard" src="/assets/images/Mewcarr.svg">
+      <img alt="" class="legendaryCard" src="/assets/images/Moltres.svg">
+      <img alt="" class="legendaryCard" src="/assets/images/Articuno.svg">
+      <img alt="" class="legendaryCard" src="/assets/images/Zapdos.svg">
+      <img alt="" class="legendaryCard" src="/assets/images/Diance.svg">
+      <img alt="" class="legendaryCard" src="/assets/images/Xerneas.svg">
+      <img class="btn right" alt="" src="/assets/images/setadir.svg">
+  </div>
+    </div>
+</main>
 </body>
 </html>
